# avilist-py

./: .gitignore  README.md  pyproject.toml
src/avilist/: __init__.py  aliases.py  avilist.py  schemas.py  utils.py
tests/: test_avilist.py  test_avilist_read_performance.py
