[project]
name = "avilist-py"
version = "0.1.1"
description = "Python wrapper for the AviList checklist"
authors = [{ name = "yuvalrot479", email = "yuvalrot@telhai.ac.il" }]
dependencies = [
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "pydantic>=2.12.5",
    "yarl>=1.22.0",
    "openpyxl>=3.1.5",
    "pyarrow>=22.0.0",
]
requires-python = "==3.11.*"
readme = "README.md"
license = { text = "MIT" }


[dependency-groups]
dev = [
    "rich>=14.2.0",
    "pytest>=9.0.2",
    "pytest-benchmark>=5.2.3",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.pdm]
distribution = true

